# mobydiff

./: CMakeLists.txt  README.md  boundary.f90  compile.sh  config.f90  cufft_bindings.f90  gpu_runtime.f90  ibm.f90  init.f90  input.ini  io.f90  main.f90  poisson_common.f90  poisson_cufft.f90  poisson_fftw.f90  poisson_solver.f90  poisson_workspace.f90  step.f90
src/: main.f90
src/modules/: boundary.f90  config.f90  field_hdf5.c  gpu_runtime.f90  ibm.f90  init.f90  io.f90  pressure_solver.f90  pressure_workspace.f90  step.f90
src/modules/pressure/: pressure_backend_cufft.f90  pressure_backend_fftw.f90  pressure_fft.f90  pressure_redblack.f90
tutorials/wavychannel/: input.ini
